--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@apollo/server": "^4.11.2"
+    "@apollo/server": "^4.11.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
+    "is-email": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.11.0"
   }
 }
