--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.11.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
+    "ioredis": "^5.4.1",
     "is-email": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0"
