--- a/app/youtube-clone-app/app.json
+++ b/app/youtube-clone-app/app.json
@@ -16,13 +16,15 @@
       "supportsTablet": true
     },
     "android": {
+      "bundler": "metro",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
