--- a/app/youtube-clone-app/package.json
+++ b/app/youtube-clone-app/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "deepmerge": "^4.3.1",
     "expo": "~52.0.18",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
@@ -19,8 +20,9 @@
     "react-native": "0.76.5",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
