--- a/app/youtube-clone-app/package.json
+++ b/app/youtube-clone-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
@@ -24,7 +25,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "expo-secure-store": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
