--- a/app/youtube-clone-app/package.json
+++ b/app/youtube-clone-app/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.16",
-    "expo-secure-store": "~14.0.0"
+    "expo-secure-store": "~14.0.0",
+    "expo-updates": "~0.26.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
