--- a/app/youtube-clone-app/package.json
+++ b/app/youtube-clone-app/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.18",
+    "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.10",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
@@ -24,10 +26,9 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.4.16",
-    "expo-secure-store": "~14.0.0",
-    "expo-updates": "~0.26.10"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
